PPL-Sources/PPL-FE/src/test/resources/CoCos/Valid/CannotOverwritePredefinedFunctions.par
CannotOverwritePredefinedFunctions {
seq identity(Int n) : Int {
    return n
}
seq main() : Void {
    var Int test = identity(6)
}
}