PPL-Sources/PPL-FE/src/test/resources/CoCos/Invalid/CannotOverwritePredefinedFunctions.par
CannotOverwritePredefinedFunctions {
seq copy(Int n) : Int {
    return n
}
seq main() : Void {
    var Int test = copy(6)
}
}